# blackboard-backup-viewer

./: .gitignore  README.md  config.example.toml  launcher.py  pyproject.toml
.github/workflows/: build.yml
bb_viewer/: config.py  html_rewrite.py  paths.py  server.py
static/: app.js  index.html  style.css
